--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -82,8 +82,8 @@
 <div class="l-grid" id="content">
   <% if @current_type === 'projects' %>
     <%= render 'projects/list', items: @items, more: @more %>
-  <% #else @current_type %>
-    <% #render 'investigators/list', items: @items, more: @more %>
+  <% elsif @current_type === 'events' %>
+    <%= render 'events/list', items: @items, more: @more %>
   <% elsif @current_type === 'posts' %>
     <%= render 'posts/list', items: @items, more: @more %>
   <% elsif @current_type === 'network' %>
