Projects updates shown

--- a/app/assets/stylesheets/layouts/_content.scss
+++ b/app/assets/stylesheets/layouts/_content.scss
@@ -15,6 +15,11 @@
   .l-content-article {
     font-family: $base-font-family-light;
     padding-right: $box-space;
+    padding-bottom: $box-space;
+
+    &:last-child {
+      padding-bottom: 0;
+    }
   }
 
 }
