--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -1,11 +1,11 @@
 <ul class="c-toolbar">
   <li id="download"class="toolbar-item -sortby">
-    <button class="c-btn js-toolbar-action" data-action="download">
+    <a href="#" class="c-btn -action" target="_blank">
       <svg class="c-icon -small -inverse">
         <use xlink:href="#icon-download"></use>
       </svg>
       Download
-    </button>
+    </a>
   </li>
 
   <li id="sortby"class="toolbar-item -sortby"></li>
