Messages: template created

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -88,5 +88,7 @@
     <%= render 'posts/list', items: @items, more: @more %>
   <% elsif @current_type === 'network' %>
     <%= render 'network' %>
+  <% elsif @current_type === 'messages' %>
+    <%= render 'messages', items: @items, more: @more %>
   <% end %>
 </div>
