Download: attr download

--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -1,6 +1,6 @@
 <ul class="c-toolbar">
   <li id="download"class="toolbar-item -sortby">
-    <a href="#" class="c-btn -action" target="_blank">
+    <a href="#" class="c-btn -action" target="_blank" download>
       <svg class="c-icon -small -inverse">
         <use xlink:href="#icon-download"></use>
       </svg>
