--- a/app/views/project_updates/new.html.erb
+++ b/app/views/project_updates/new.html.erb
@@ -1,6 +1,6 @@
 <div class="c-project-form">
   <div class="wrapper">
-    <%= render 'form' %>
+    <%= render 'form', action: 'new' %>
         </div>
       </div>
   </div>
