Messages: template and user controller

--- a/app/views/messages/_list.html.erb
+++ b/app/views/messages/_list.html.erb
@@ -22,7 +22,7 @@
   <div class="row collapse">
     <div class="column small-12">
       <div class="c-card">
-        <p>No events</p>
+        <p>No messages</p>
       </div>
     </div>
   </div>
