--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,9 +86,9 @@
     <%= render 'events/list', items: @items, more: @more %>
   <% elsif @current_type === 'posts' %>
     <%= render 'posts/list', items: @items, more: @more %>
+  <% elsif @current_type === 'messages' %>
+    <%= render 'messages/list', items: @items, more: @more %>
   <% elsif @current_type === 'network' %>
     <%= render 'network' %>
-  <% elsif @current_type === 'messages' %>
-    <%= render 'messages', items: @items, more: @more %>
   <% end %>
 </div>
