--- a/app/assets/stylesheets/components/_select2-override.scss
+++ b/app/assets/stylesheets/components/_select2-override.scss
@@ -77,6 +77,10 @@
     color: $base-font-color;
 	}
 
+  .select2-selection .select2-selection--single {
+    width: 100%;
+  }
+
   // SINGLE
 	.select2-selection--single {
     height: auto;
