--- a/app/views/network_events/edit.html.erb
+++ b/app/views/network_events/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="c-project-form">
   <div class="wrapper">
-    <%= render 'form', action: 'new' %>
+    <%= render 'form', action: 'edit' %>
   </div>
 </div>
