Home: remove tooltip from the home map

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <% title 'Welcome' %>
 
-<section class="l-app -main -full">
+<section class="l-app -main -home -full">
   <div class="l-app-map">
     <div id="map" class="c-map"></div>
   </div>
