Detail proect people

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -92,9 +92,9 @@
 </section>
 
 <div class="l-grid" id="content">
-  <% if @current_type == 'info' %>
+  <% if @current_type == 'people' %>
+    <%= render 'investigators/list', items: @items, more: @more  %>
+  <%else %>
     <%= render 'projects/info' %>
-  <%else%>
-    <%= render 'projects/list' %>
   <% end %>
 </div>
