--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -70,6 +70,10 @@ label {
     margin-bottom: 0;
   }
 
+  &.-mg-big {
+    margin-bottom: $box-space;
+  }
+
   .column.-flex {
     display: flex;
   }
