--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <% title @project.title %>
 
-<% if user_signed_in? && current_user.projects.include?(@project) %>
+<% if @owner %>
   <%= link_to 'Remove relation', remove_relation_project_path(@project), method: :patch %>
 <% elsif user_signed_in? %>
   <%= link_to 'Relation request', relation_request_project_path(@project), method: :patch %>
