Map: clusters popup

--- a/app/assets/javascripts/templates/infowindow.hbs
+++ b/app/assets/javascripts/templates/infowindow.hbs
@@ -32,4 +32,8 @@
       </div>
     {{/if}}
   {{/if}}
+  {{#if investigations}}
+    <h3>{{investigations}} investigations</h3>
+  {{/if}}
+
 </div>
