--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,4 +1,5 @@
 .c-card {
+  position: relative;
   width: 100%;
   padding: $box-space;
   background-color: $body-bg-color;
@@ -30,12 +31,32 @@
       text-align: center;
       margin: 4px 0 0;
     }
+
     h3 {
       width: 100%;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
       text-transform: none;
+    }
+
+
+
+    .form-message {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translate(-50%,-50px);
+      z-index: 2;
+      background: white;
+      padding: 20px;
+      width: 100%;
+      box-shadow: $box-shadow;
+
+      &.-active {
+        display: block;
+      }
     }
   }
 
