--- a/app/views/shared/_icons.html.erb
+++ b/app/views/shared/_icons.html.erb
@@ -98,5 +98,10 @@
 <path class="path4" fill="none" stroke="#fff" stroke-width="1.6842" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M32.989 28.047c0-0.823-0.369-1.607-1.027-2.119-1.006-0.783-2.751-1.748-5.234-1.748s-4.228 0.965-5.234 1.748c-0.658 0.511-1.027 1.295-1.027 2.119v1.587h12.522v-1.587z"></path>
 <path class="path5" fill="none" stroke="#fff" stroke-width="1.6842" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M26.728 13.273c1.921 0 3.478 1.526 3.478 3.409s-1.557 3.409-3.478 3.409c-1.921 0-3.478-1.526-3.478-3.409s1.557-3.409 3.478-3.409v0z"></path>
 </symbol>
+<symbol id="icon-Pending_icon" viewBox="0 0 32 32">
+<title>Pending_icon</title>
+<path class="path1" fill="#68299b" stroke="#68299b" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M30.4 16c0 7.953-6.447 14.4-14.4 14.4s-14.4-6.447-14.4-14.4c0-7.953 6.447-14.4 14.4-14.4s14.4 6.447 14.4 14.4z"></path>
+<path class="path2" fill="#fff" d="M17.067 17.067c0 0.589-0.478 1.067-1.067 1.067s-1.067-0.478-1.067-1.067v-6.4c0-0.589 0.478-1.067 1.067-1.067s1.067 0.478 1.067 1.067v6.4zM16 22.4c-0.589 0-1.067-0.478-1.067-1.067s0.478-1.067 1.067-1.067c0.589 0 1.067 0.478 1.067 1.067s-0.478 1.067-1.067 1.067v0zM16 3.2c-7.058 0-12.8 5.742-12.8 12.8s5.742 12.8 12.8 12.8c7.058 0 12.8-5.742 12.8-12.8s-5.742-12.8-12.8-12.8v0z"></path>
+</symbol>
 </defs>
 </svg>
