--- a/app/assets/javascripts/templates/infowindow.hbs
+++ b/app/assets/javascripts/templates/infowindow.hbs
@@ -18,7 +18,12 @@
   {{/if}}
   {{#if event}}
     <h3><a href="/events/{{event}}">{{title}}</a></h3>
-    <p>{{#if start_date}}{{start_date}}{{/if}} - {{#if end_date}}{{end_date}}{{/if}}</p>
+    {{#if start_date}}
+      {{#if end_date}}
+        <p>{{#if start_date}}{{start_date}}{{else}}-{{/if}}</p>
+        <p>{{#if end_date}}{{end_date}}{{else}}-{{/if}}</p>
+      {{/if}}
+    {{/if}}
   {{/if}}
   {{#if resource_id}}
     <h3><a href="/investigators/{{resource_id}}">{{resource_name}}</a></h3>
