Footer: google translate added

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,6 +26,9 @@
       <div class="column small-12 medium-7 align-right">
         <div class="c-nav align-right">
           <ul class="-inverse">
+            <li class="c-translate">
+              <div id="googleTranslateGCPM"></div>
+            </li>
             <li>
               <%= link_to t('download'), download_user_manual_path,
                 download: 'user-manual', title: t('user-manual')
