investigator edition added

--- a/app/assets/javascripts/templates/form/input.hbs
+++ b/app/assets/javascripts/templates/form/input.hbs
@@ -15,6 +15,7 @@
   {{#if min}}min="{{min}}"{{/if}}
   {{#if max}}max="{{max}}"{{/if}}
   {{#if checked}}checked="true"{{/if}}
+  {{#if disabled}}disabled="true"{{/if}}
 />
 {{#if info}}
   <span> {{info}}</span>
