--- a/app/assets/javascripts/templates/project_form.hbs
+++ b/app/assets/javascripts/templates/project_form.hbs
@@ -54,6 +54,8 @@
         </div>
       </div>
 
+      <div id="investigatororganizationedit"></div>
+
       <div id="investigatororganization"></div>
       <div class="row">
         <div class="column small-12">
