--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -22,7 +22,7 @@
             <% end %>
           </p>
           <% if controller_name === 'users' && !p.project_users.first.is_approved %>
-            <span class="-pending">
+            <span class="pending">
               <svg class="c-icon -medium icon-Pending_icon -mg-right">
                 <use xlink:href="#icon-Pending_icon"></use>
               </svg>
