--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -39,10 +39,14 @@
     }
   }
 
-  .-pending {
+  .pending {
     display: flex;
     align-items: center;
     color: $secondary-color;
+
+    > svg {
+      margin: 0 ($inline-space / 2) 0 0;
+    }
   }
 
   &.-projects {
