--- a/app/assets/javascripts/templates/investigator_form.hbs
+++ b/app/assets/javascripts/templates/investigator_form.hbs
@@ -1,4 +1,5 @@
 <form class="c-grid c-modal-investigator" action="#">
+
   <div class="row">
     <div class="column small-12">
       <h2 class="c-title">New Investigator</h2>
@@ -6,20 +7,20 @@
   </div>
 
   <div class="row">
-    <div class="column small-12">
+    <div class="column small-12 medium-6">
       <div id="investigatorname" class="c-select"></div>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="column small-12">
+    <div class="column small-12 medium-6">
       <div id="investigatoremail" class="c-select"></div>
     </div>
   </div>
 
   <div class="row">
-    <div class="column small-12">
+    <div class="column small-12 medium-6">
       <div id="investigatorwebsite" class="c-select"></div>
+    </div>
+    <div class="column small-12 medium-6">
+      <div id="investigatoruser" class="c-select"></div>
     </div>
   </div>
 
