--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -44,8 +44,8 @@
             <% if @project.funding_sources && @project.funding_sources.size > 0 %>
               <div class="column small-12 large-4 align-middle">
                 <div class="c-avatar -small">
-                  <svg class="c-icon icon-funding_icon">
-                    <use xlink:href="#icon-funding_icon"></use>
+                  <svg class="c-icon icon-funding">
+                    <use xlink:href="#icon-funding"></use>
                   </svg>
                 </div>
                 <div>
