--- a/app/assets/javascripts/templates/dropdown.hbs
+++ b/app/assets/javascripts/templates/dropdown.hbs
@@ -8,4 +8,10 @@
       </div>
     {{/each}}
   </div>
+  {{#if arrows}}
+    <div class="arrows js-arrows-action">
+      <svg class="c-icon icon-arrow_up -small -active"><use xlink:href="#icon-arrow_up"></use></svg>
+      <svg class="c-icon icon-arrow_down -small"><use xlink:href="#icon-arrow_down"></use></svg>
+    </div>
+  {{/if}}
 </div>
