--- a/app/views/events/_info.html.erb
+++ b/app/views/events/_info.html.erb
@@ -6,7 +6,7 @@
         <%= @event.description.html_safe %>
       </article>
       <div class="row -no-mrg align-right wrapper">
-        <% if current_user.events.include?(@event) %>
+        <% if current_user && current_user.events.include?(@event) %>
           <%= link_to (t 'edit'), edit_user_event_path(current_user.id), class: "c-btn -secondary -inverse" %>
         <% end %>
       </div>
