Countries: deal with countries with no data

--- a/app/assets/javascripts/templates/country_data.hbs
+++ b/app/assets/javascripts/templates/country_data.hbs
@@ -4,7 +4,11 @@
       <div class="c-data-item">
         <p class="title">Presence of screening programs</p>
         <h2 class="answer">
-          {{#if screening_programs}} Yes {{else}} No {{/if}}
+          {{#if screening_programs}}
+            Yes
+          {{else}}
+            No
+          {{/if}}
         </h2>
       </div>
     </div>
@@ -12,7 +16,11 @@
       <div class="c-data-item">
         <p class="title">Quality of registration data</p>
         <h2 class="answer">
-          {{quality_of_vital_registration_dataquality_of_death_certificatio}}
+          {{#if quality_of_vital_registration_dataquality_of_death_certificatio}}
+            {{quality_of_vital_registration_dataquality_of_death_certificatio}}
+          {{else}}
+            -
+          {{/if}}
         </h2>
       </div>
     </div>
@@ -20,7 +28,11 @@
       <div class="c-data-item">
         <p class="title">Pink Ribbon Red Ribbon Collaboration</p>
         <h2 class="answer">
-          {{#if pink_ribbon_red_ribbon_collaborationpink_ribbon_red_ribbon_prr}} Yes {{else}} No {{/if}}
+          {{#if pink_ribbon_red_ribbon_collaborationpink_ribbon_red_ribbon_prr}}
+            Yes
+          {{else}}
+            No
+          {{/if}}
         </h2>
       </div>
     </div>
@@ -28,7 +40,11 @@
       <div class="c-data-item">
         <p class="title">UICC membership (number of organisations)</p>
         <h2 class="answer">
-          {{union_for_international_cancer_control_membershipnumber_of_uicc}}
+          {{#if union_for_international_cancer_control_membershipnumber_of_uicc}}
+            {{union_for_international_cancer_control_membershipnumber_of_uicc}}
+          {{else}}
+            -
+          {{/if}}
         </h2>
       </div>
     </div>
@@ -36,7 +52,11 @@
       <div class="c-data-item">
         <p class="title">Human development index category</p>
         <h2 class="answer">
-          {{human_development_index_category2013}}
+          {{#if human_development_index_category2013}}
+            {{human_development_index_category2013}}
+          {{else}}
+            -
+          {{/if}}
         </h2>
       </div>
     </div>
@@ -44,7 +64,11 @@
       <div class="c-data-item">
         <p class="title">Warning labels on cigarette packaging</p>
         <h2 class="answer">
-          {{warning_labels_on_cigarette_packaging2013}}
+          {{#if warning_labels_on_cigarette_packaging2013}}
+            {{warning_labels_on_cigarette_packaging2013}}
+          {{else}}
+            -
+          {{/if}}
         </h2>
       </div>
     </div>
